# muzik-offline

./: README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: macosbuild.yml
muzik-offline/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
muzik-offline/src/: main.tsx  sad1.txt
muzik-offline/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
muzik-offline/src-tauri/db/: db
muzik-offline/src-tauri/icons/: icon.icns
muzik-offline/src-tauri/src/: commands.rs  components.rs  main.rs  metadata_retriever.rs  music_list_organizer.rs  normalplaylist.rs  player.rs  shuffler.rs  utils.rs
muzik-offline/src-tauri/src/app/: controller.rs
muzik-offline/src-tauri/src/commands/: general_commands.rs  metadata_edit.rs  metadata_retriever.rs  mod.rs  refresh_paths_at_start.rs
muzik-offline/src-tauri/src/components/: album.rs  artist.rs  audio_manager.rs  genre.rs  hmaptype.rs  mod.rs  playlist.rs  song.rs
muzik-offline/src-tauri/src/constants/: constant_values.rs  mod.rs
muzik-offline/src-tauri/src/database/: db_api.rs  db_manager.rs  db_struct.rs  mod.rs
muzik-offline/src-tauri/src/music/: media_control_api.rs  mod.rs  player.rs
muzik-offline/src-tauri/src/socials/: discord_rpc.rs  mod.rs
muzik-offline/src-tauri/src/utils/: general_utils.rs  mod.rs  music_list_organizer.rs
muzik-offline/src/assets/: index.ts
muzik-offline/src/assets/covers/: NullCoverFour.tsx  NullCoverNull.tsx  NullCoverTwo.tsx
muzik-offline/src/assets/icons/: index.ts
muzik-offline/src/assets/icons/Arrows/: ArrowCurveLeftRight.tsx  ArrowCurveRightUp.tsx  ArrowRefresh.tsx  ChevronDown.tsx  ChevronLeft.tsx  ChevronRight.tsx  Next_page.tsx  Prev_page.tsx
muzik-offline/src/assets/icons/Charts/: Bar_chart.tsx
muzik-offline/src/assets/icons/General/: AlertTriangle.tsx  CancelRight.tsx  Check.tsx  CheckGreen.tsx  ComponentIcon.tsx  Cross.tsx  CrossRed.tsx  DotHorizontal.tsx  Edit.tsx  EditImage.tsx  EditProfile.tsx  ExplicitIcon.tsx  Home_icon.tsx  InformationCircleContained.tsx  InformationCircleContainedBlue.tsx  InformationCircleContainedOrange.tsx  Menu.tsx  (+5 more)
muzik-offline/src/assets/logos/: AppLogo.tsx  App_logo.tsx  FacebookLogo.tsx  GithubLogo.tsx  GoogleLogo.tsx  MicrosoftLogo.tsx  TwitterLogo.tsx  index.ts
muzik-offline/src/assets/playlists/: NullCoverOne.tsx  NullCoverThree.tsx
muzik-offline/src/content/: index.ts
muzik-offline/src/database/: database.ts  directories.ts  index.ts  player.ts  saved_object.ts  side_elements.ts  wallpaper.ts
muzik-offline/src/interface/App/: App.tsx  MiniPlayer.tsx  index.ts
muzik-offline/src/interface/components/: index.ts
muzik-offline/src/interface/layouts/: AboutSettings.tsx  AdvancedSettings.tsx  AppearanceSettings.tsx  AudioLabSettings.tsx  GeneralSettings.tsx  HistoryNextFloating.tsx  LyricsHistoryNextFloating.tsx  ProfileDetails.tsx  SearchAlbums.tsx  SearchArtists.tsx  SearchGenres.tsx  SearchPlaylists.tsx  SearchSongs.tsx  SecuritySettings.tsx  UserFavorites.tsx  UserFriends.tsx  UserRecentSong.tsx  UserVisiblePlaylists.tsx  index.ts
muzik-offline/src/interface/pages/: AlbumDetails.tsx  AllAlbums.tsx  AllArtists.tsx  AllGenres.tsx  AllPlaylists.tsx  AllTracks.tsx  ArtistCatalogue.tsx  GenreView.tsx  PlaylistView.tsx  SearchPage.tsx  Settings.tsx  SongAlbumDetails.tsx  index.ts
muzik-offline/src/store/: index.ts  playerState.tsx  reducerStore.ts  reducerTypes.ts  storeTypes.ts
muzik-offline/src/types/: index.ts
muzik-offline/src/utils/: index.ts  playerControl.ts  reducerUtils.ts
(+169 files in other folders)
