[package]
name = "muzik-offline"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "notification-all", "os-all", "window-minimize", "window-unmaximize", "window-set-resizable", "window-start-dragging", "window-hide", "window-set-fullscreen", "window-maximize", "window-show", "window-close", "window-unminimize", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
id3 = "1.10.0"
tokio = { version = "1.35.0", features = ["full"] }
base64 = "0.21.5"
image = "0.24.7"
kira = "0.8.5"
lofty = "0.17.1"
rand = "0.8.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
