[package]
name = "muzik-offline"
version = "0.3.1"
description = "A desktop music player for listening to music offline."
authors = ["Michael"]
license = ""
repository = "https://github.com/muzik-apps/muzik-offline"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-start-dragging", "window-minimize", "window-close", "window-show", "window-unmaximize", "window-unminimize", "window-hide", "window-maximize", "path-all", "dialog-open", "notification-all", "os-all", "window-set-resizable", "window-set-fullscreen", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
id3 = "1.10.0"
tokio = { version = "1.35.0", features = ["full"] }
base64 = "0.21.5"
image = "0.24.7"
kira = "0.8.5"
lofty = "0.17.1"
rand = "0.8.5"
rayon = "1.8.0"
sled = "0.34.7"
dirs = "5.0.1"
discord-rich-presence = "0.2.3"
dotenv = "0.15.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
